<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Rachel030219

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>

    <string name="app_name">HashChecker</string>
	
	<string name="open">Open drawer</string>
	<string name="close">Close drawer</string>
	
	<string name="home">Home</string>
	<string name="section">Others</string>
	<string name="setting">Settings</string>
	<string name="donate">Donate</string>
	<string name="about">About</string>
	<string name="copyall">Copy all</string>
	<string name="repeated">Recognize repeat</string>
	
	<string name="file">File : %1$s</string>
	<string name="md5">MD5 : %1$s</string>
	<string name="sha1">SHA1 : %1$s</string>
	<string name="sha224">SHA224 : %1$s</string>
	<string name="sha256">SHA256 : %1$s</string>
	<string name="sha384">SHA384 : %1$s</string>
	<string name="sha512">SHA512 : %1$s</string>
    <string name="crc32">CRC32 : %1$s</string>
	<string name="copied">Copied %1$s to clipboard</string>
	<string name="checkInput">Input a value to check this file</string>
	<string name="same">Completely the same</string>

    <string name="header">HashChecker 1.5.1 STABLE\nYou need not to calculate hash,\nbut you should have a HashChecker</string>

	<string name="settings_output">Output</string>
	<string name="settings_output_case">Uppercase</string>
	<string name="settings_output_case_on">Make result be uppercase</string>
	<string name="settings_output_case_off">Make result be lowercase</string>
	<string name="settings_output_md5">MD5</string>
    <string name="settings_output_md5_on">Enable MD5 output</string>
    <string name="settings_output_md5_off">Disable MD5 output</string>
    <string name="settings_output_sha1">SHA1</string>
    <string name="settings_output_sha1_on">Enable SHA1 output</string>
    <string name="settings_output_sha1_off">Disable SHA1 output</string>
	<string name="settings_output_sha256">SHA256</string>
    <string name="settings_output_sha256_on">Enable SHA256 output</string>
    <string name="settings_output_sha256_off">Disable SHA256 output</string>
    <string name="settings_output_sha384">SHA384</string>
    <string name="settings_output_sha384_on">Enable SHA384 output</string>
    <string name="settings_output_sha384_off">Disable SHA384 output</string>
    <string name="settings_output_sha512">SHA512</string>
    <string name="settings_output_sha512_on">Enable SHA512 output</string>
    <string name="settings_output_sha512_off">Disable SHA512 output</string>
	<string name="settings_output_crc32">CRC32</string>
    <string name="settings_output_crc32_on">Enable CRC32 output</string>
    <string name="settings_output_crc32_off">Disable CRC32 output</string>
	<string name="settings_output_crc32_hex">CRC32 results use hexadecimal</string>
    <string name="settings_output_crc32_hex_on">Convert CRC32 to hexadecimal</string>
    <string name="settings_output_crc32_hex_off">Convert CRC32 to decimal</string>
	<string name="settings_output_copyall_tag">Output tags(like \"[File]\")</string>
	<string name="settings_output_copyall_tag_on">Output tags while copying all</string>
	<string name="settings_output_copyall_tag_off">Do not output tags while copying all</string>
	<string name="settings_output_cover">Cover the result</string>
    <string name="settings_output_cover_on">The result before will be covered after a new value is calculated</string>
    <string name="settings_output_cover_off">The result before will not be covered after a new value is calculated</string>

	<string name="about_version">HashChecker 1.5.1 STABLE</string>
	<string name="about_projects">Open-source projects</string>
	<string name="about_projects_preferencefragment">PreferenceFragment-Compat by Machinarius</string>
	<string name="about_projects_preferencefragment_license">Copyright (C) 2013 The Android Open Source Project\nLicensed under the Apache License, Version 2.0 (the \"License\");\nYou may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
	<string name="about_projects_materialsettingsactivitydemo">MaterialSettingsActivityDemo by drakeet</string>
	<string name="about_projects_materialsettingsactivitydemo_license">The author didn\'t give out a license. I learned how to make a Material-Design settings activity from his blog https://drakeet.me .</string>
	<string name="about_specialthanks">Special thanks to:</string>
	<string name="about_specialthanks_to">Trumeet\n\nRikka</string>
	<string name="about_pp">Privacy Policy</string>
	<string name="about_me">Developed by Rachel, 2017</string>
	<string name="about_me_title">About me</string>
	<string name="about_me_content">Hi, I am Rachel, a fourteen-year-old student(grade one of senior high) and independent developer.\nI spent my free time developing on Android. All of my apps are free forever, hope you like them. And, please follow me on Twitter(@tangrui003 ) to get latest news and join the Telegram channel(@rachelnotice ) to get notice, and feel free to ask me any question through Telegram(@Rachel030219 ).\n- Rachel, 2017</string>
	<string name="updated_title">What\'s New</string>
	<string name="updated_changelog">HashChecker 1.5.1 STABLE Changelog:\n\n- Edited API \n\n- Fixed a bug which influences repeat coloring \n\n- Changed color sort to help distinguish \n\n- Added Privacy Policy</string>

    <string name="permission_denied">Please grant permission in settings, or you will be no longer able to use this app.</string>
</resources>
