<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Rachel030219

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<PreferenceScreen
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<PreferenceCategory
		app:title="@string/settings_output">
		
		<CheckBoxPreference
			app:title="@string/settings_output_case"
			app:key="output_case"
			app:summaryOn="@string/settings_output_case_on"
			app:summaryOff="@string/settings_output_case_off"
			app:defaultValue="true"/>

		<CheckBoxPreference
			app:title="@string/settings_output_md5"
			app:key="output_md5"
			app:summaryOn="@string/settings_output_md5_on"
			app:summaryOff="@string/settings_output_md5_off"
			app:defaultValue="true"/>

		<CheckBoxPreference
			app:title="@string/settings_output_sha1"
			app:key="output_sha1"
			app:summaryOn="@string/settings_output_sha1_on"
			app:summaryOff="@string/settings_output_sha1_off"
			app:defaultValue="true"/>

		<CheckBoxPreference
            app:title="@string/settings_output_sha256"
            app:key="output_sha256"
            app:summaryOn="@string/settings_output_sha256_on"
            app:summaryOff="@string/settings_output_sha256_off"
            app:defaultValue="true"/>

        <CheckBoxPreference
            app:title="@string/settings_output_sha384"
            app:key="output_sha384"
            app:summaryOn="@string/settings_output_sha384_on"
            app:summaryOff="@string/settings_output_sha384_off"
            app:defaultValue="true"/>

        <CheckBoxPreference
            app:title="@string/settings_output_sha512"
            app:key="output_sha512"
            app:summaryOn="@string/settings_output_sha512_on"
            app:summaryOff="@string/settings_output_sha512_off"
            app:defaultValue="true"/>

		<CheckBoxPreference
            app:title="@string/settings_output_crc32"
            app:key="output_crc32"
            app:summaryOn="@string/settings_output_crc32_on"
            app:summaryOff="@string/settings_output_crc32_off"
            app:defaultValue="true"/>

		<CheckBoxPreference
			app:title="@string/settings_output_crc32_hex"
			app:key="output_crc32_hex"
            app:summaryOn="@string/settings_output_crc32_hex_on"
            app:summaryOff="@string/settings_output_crc32_hex_off"
            app:defaultValue="false"
            app:dependency="output_crc32"/>

		<CheckBoxPreference
			app:title="@string/settings_output_copyall_tag"
			app:key="output_copyall_tag"
			app:summaryOn="@string/settings_output_copyall_tag_on"
			app:summaryOff="@string/settings_output_copyall_tag_off"
			app:defaultValue="true"/>

		<CheckBoxPreference
            app:title="@string/settings_output_cover"
            app:key="output_cover"
            app:summaryOn="@string/settings_output_cover_on"
            app:summaryOff="@string/settings_output_cover_off"
            app:defaultValue="true"/>
		
	</PreferenceCategory>
	
</PreferenceScreen>
