<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2016 Rachel030219

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.v7.widget.Toolbar
			android:id="@+id/about_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			android:paddingTop="@dimen/translucent"
			android:fitsSystemWindows="true"/>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center|top"
			android:padding="16dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_version"
				android:textColor="#212121"
				android:textSize="20sp"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_projects"
				android:textColor="#3C3C3C"
				android:textSize="16sp"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:id="@+id/about_projects_preferencefragment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_projects_preferencefragment"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:id="@+id/about_projects_materialsettingsactivitydemo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_projects_materialsettingsactivitydemo"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_specialthanks"
				android:textColor="#3C3C3C"
				android:textSize="16sp"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_specialthanks_to"
				android:singleLine="true"
				android:layout_marginBottom="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="And You"
				android:textSize="18sp"
				android:singleLine="true"/>

		</LinearLayout>

	</ScrollView>
	
	<TextView
		android:id="@+id/about_me"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_me"
		android:singleLine="true"
		android:layout_marginBottom="16dp"
		android:layout_gravity="center|bottom"/>

</android.support.design.widget.CoordinatorLayout>

