<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Rachel030219

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
	<group android:checkableBehavior="single">
		
		<item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
		
	</group>
		
	<group android:checkableBehavior="none"
		android:id="@+id/menu_others">
				
		<item
			android:id="@+id/setting"
			android:icon="@drawable/ic_setting"
			android:title="@string/setting"/>
		
		<item
			android:id="@+id/about"
			android:icon="@drawable/ic_information"
			android:title="@string/about"/>
		
	</group>
    
</menu>
